--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ I am Silvia Chilel. My friend would describe me as involved, committed, and alwa
 </p>
 
 <p><br>
-<img src="http://s1.postimg.org/usjqxezmn/Screen_Shot_2015_07_29_at_2_22_35_PM.png" width="200" height="200"> 
+<img src="myproject.html" width="200" height="200"> 
 </p>
 
       <footer class="site-footer">
