--- a/myproject.html
+++ b/myproject.html
@@ -1,9 +1,17 @@
-<html>
+
+ <html>
   <head>
     <link rel="stylesheet" href="mystylesheet.css">
 </head>
 <body>
-
+<style>
+	body {
+	background-image: url( "http://www.pulsarwallpapers.com/data/media/3/Alien%20Ink%202560X1600%20Abstract%20Background.jpg");
+	font-family: "Gill sans", "Gill sans MT", Calibri, sans-serif;
+	text-align: center;
+	-->
+	}
+</style>
 
 <p>
 This was fun !
