--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ I am Silvia Chilel. My friend would describe me as involved, committed, and alwa
 
 
 <p><br>
-<a href="myproject.html"
-<img src="http://s1.postimg.org/usjqxezmn/Screen_Shot_2015_07_29_at_2_22_35_PM.png" width="200" height="200"> 
+<a href="myproject.html">
+<img src="http://s1.postimg.org/usjqxezmn/Screen_Shot_2015_07_29_at_2_22_35_PM.png" width="200" height="200"></a> 
 </p>
 
       <footer class="site-footer">
